# nusnextbus

./: .env.example  .gitignore  README.md  api.py  bot.py  planner.py  pyproject.toml  requirements-dev.txt  requirements.txt  routes.py  routing.py  stops.py
.github/workflows/: ci.yml
nus-bus-bot/: api.py  bot.py  favourites.py  planner.py  stops.py
tests/: conftest.py  test_api.py  test_keyboards.py  test_markdown.py  test_route_on_campus.py  test_routing.py
